--- a/public/compass/stylesheets/screen.css
+++ b/public/compass/stylesheets/screen.css
@@ -2,7 +2,7 @@
  * In this file you should write your main styles. (or centralize your imports)
  * Import this file using the following HTML or equivalent:
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
-/* line 5, ../../../../../../../usr/local/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 5, ../../../../../../../../usr/local/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -24,108 +24,131 @@ time, mark, audio, video {
   vertical-align: baseline;
 }
 
-/* line 22, ../../../../../../../usr/local/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 22, ../../../../../../../../usr/local/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 html {
   line-height: 1;
 }
 
-/* line 24, ../../../../../../../usr/local/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 24, ../../../../../../../../usr/local/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 ol, ul {
   list-style: none;
 }
 
-/* line 26, ../../../../../../../usr/local/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 26, ../../../../../../../../usr/local/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
 
-/* line 28, ../../../../../../../usr/local/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 28, ../../../../../../../../usr/local/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 caption, th, td {
   text-align: left;
   font-weight: normal;
   vertical-align: middle;
 }
 
-/* line 30, ../../../../../../../usr/local/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 30, ../../../../../../../../usr/local/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 q, blockquote {
   quotes: none;
 }
-/* line 103, ../../../../../../../usr/local/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 103, ../../../../../../../../usr/local/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 q:before, q:after, blockquote:before, blockquote:after {
   content: "";
   content: none;
 }
 
-/* line 32, ../../../../../../../usr/local/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 32, ../../../../../../../../usr/local/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 a img {
   border: none;
 }
 
-/* line 116, ../../../../../../../usr/local/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 116, ../../../../../../../../usr/local/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
   display: block;
 }
 
-/* line 10, ../sass/screen.scss */
+@media (max-width: 800px) {
+  /* line 12, ../sass/screen.scss */
+  .projectThumb * {
+    display: block !important;
+  }
+}
+@media (max-width: 1100px) {
+  /* line 19, ../sass/screen.scss */
+  body {
+    width: 90% !important;
+  }
+}
+/* line 25, ../sass/screen.scss */
+.sample-show-hide.ng-hide {
+  opacity: 0;
+}
+
+/* line 30, ../sass/screen.scss */
 body {
   width: 1000px;
   margin: 0 auto;
 }
-/* line 11, ../sass/screen.scss */
+/* line 31, ../sass/screen.scss */
 body * {
   font-family: Lucida Grande;
   font-size: 10pt;
   box-sizing: border-box;
 }
 
-/* line 20, ../sass/screen.scss */
+/* line 40, ../sass/screen.scss */
+h1 {
+  font-size: 30pt;
+}
+
+/* line 44, ../sass/screen.scss */
 #nav {
   margin: 30px 0px;
 }
-/* line 21, ../sass/screen.scss */
+/* line 45, ../sass/screen.scss */
 #nav .navLink {
-  background: #466;
+  background: #555;
   position: relative;
   color: white;
   padding: 10px;
   margin: 1px;
   display: inline;
+  transition: .1s;
+  bottom: 0px;
 }
-/* line 28, ../sass/screen.scss */
+/* line 54, ../sass/screen.scss */
 #nav .navLink:hover {
   cursor: pointer;
-  background: #588585;
+  background: #6f6f6f;
   bottom: 3px;
 }
 
-/* line 37, ../sass/screen.scss */
+/* line 63, ../sass/screen.scss */
 .projectThumb {
   display: flex;
   width: 100%;
   height: 300px;
   border: 1px solid rgba(0, 0, 0, 0.2);
-  margin: 10px;
+  margin: 10px 0px;
 }
-/* line 42, ../sass/screen.scss */
+/* line 68, ../sass/screen.scss */
 .projectThumb .imgThumb {
   display: inline;
   width: 500px;
 }
-/* line 46, ../sass/screen.scss */
+/* line 72, ../sass/screen.scss */
 .projectThumb .right {
   display: inline-flex;
   flex-direction: column;
   width: 500px;
 }
-/* line 50, ../sass/screen.scss */
+/* line 76, ../sass/screen.scss */
 .projectThumb .right h1 {
   padding: 10px;
-  font-size: 30pt;
-  background: #466;
+  background: #555;
   color: white;
 }
-/* line 56, ../sass/screen.scss */
+/* line 81, ../sass/screen.scss */
 .projectThumb .right span {
   padding: 10px;
   line-height: 1.5;
