--- a/public/compass/sass/screen.scss
+++ b/public/compass/sass/screen.scss
@@ -3,9 +3,8 @@
  * Import this file using the following HTML or equivalent:
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
 
-@import "compass/reset";
 
-$color1: #555;
+$color1: rgba(20, 20, 100, .8);
 
 @media (max-width: 800px) {
 	.projectThumb{
@@ -29,7 +28,7 @@ $color1: #555;
 
 body{
 	*{ 
-		font-family: Lucida Grande;
+		font-family: 'Roboto', sans-serif;
 		font-size: 10pt;
 		box-sizing: border-box;
 	}
@@ -39,6 +38,8 @@ body{
 
 h1{
 	font-size: 30pt;
+	font-weight: 500;
+	margin: 0;
 }
 
 #nav{
@@ -51,13 +52,69 @@ h1{
 		display: inline;
 		transition: .1s;
 		bottom: 0px;
-		&:hover{
+		&:hover,&:focus{
+			outline: none;
 			cursor: pointer;
 			background: lighten($color1,10);
 			bottom: 3px;
 		}
 	}
 	margin: 30px 0px;
+}
+
+blog-post{
+	div{
+		padding: 20px 0px;
+		h1{
+			margin: 10px 0px;
+			font-weight: 800;
+			color: #333;
+		}
+		p{
+			line-height: 1.5
+		}
+	}
+	hr{
+		margin: 20px auto;
+		width: 80%;
+	    border: 0;
+	    height: 1px;
+	    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), $color1, rgba(0, 0, 0, 0));
+	}
+}
+
+#admin{
+	*{
+		display: block;
+		margin-bottom: 10px;
+	}
+
+	button {
+		padding: 10px;
+	}
+
+	form{
+		#title{
+			font-size: 20pt;
+			font-weight: bold;
+			width: 100%;
+		}
+		textarea{
+			width: 100%;
+			height: 200px;
+			display: inline-block;
+		}
+		#tags{
+			width: 100%;
+		}
+		button {
+			float: right;
+		}
+	}
+	#togglePreview *{
+		cursor: pointer;
+		display: inline;
+	}
 }
 
 .projectThumb{
@@ -85,3 +142,4 @@ h1{
 	}
 	margin: 10px 0px;
 }
+
