--- a/public/views/blogPostDirective.html
+++ b/public/views/blogPostDirective.html
@@ -1,6 +1,6 @@
 <div>
 	<h1>{{post.title}}</h1>
+	<p class="date">{{post.date.toString() | date:"medium"}}</p>
 	<p marked="post.text"></p>
-	<p>{{post.date}}</p>
 </div>
 <hr>
