--- a/public/compass/sass/screen.scss
+++ b/public/compass/sass/screen.scss
@@ -4,36 +4,131 @@
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
 
 
-$color1: rgba(20, 20, 100, .8);
+/*$color1: #48C;*/
+$color1: #25A;
+$color1_inv: lighten(invert($color1),0);
 
-@media (max-width: 800px) {
+
+$shadow1: 0px 4px 5px rgba(0,0,0,0.2);
+
+//============================= disable overflow scroll =============================
+
+html, body {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+body {
+    height: 100%;
+    overflow: scroll;
+    -webkit-overflow-scrolling: touch;
+}
+
+//============================= responsive things =============================
+
+
+@media screen and (max-width: 783px) {
 	.projectThumb{
-		*{
-			display: block !important;
+		span,div{
+			font-size: 1.6vw;
 		}
 	}
 }
 
-@media (max-width: 1100px) {
-   body{
-   		width: 90% !important;
-   }
+@media screen and (max-width: 620px) {
+	.navBar{
+		display: none !important;
+	}
+	.navLink{
+		width: 100%;
+	}
+	.projectThumb{
+		flex-direction: column !important;
+		img{
+			width: 100% !important;
+		}
+		margin: 20px 0px !important;
+		span,div{
+			font-size: 10pt;
+		}
+	}
 }
 
 
-.sample-show-hide.ng-hide {
-  opacity:0;
-}
 
 
+//============================= set up main layout =============================
 body{
+	margin: 0;
 	*{ 
 		font-family: 'Roboto', sans-serif;
 		font-size: 10pt;
-		box-sizing: border-box;
 	}
-	width: 1000px;
+	background: white;
+}
+
+
+#content{
+	padding-top: 100px;
+	max-width: 1000px;
+	width: 100%;
 	margin: 0 auto;
+}
+
+//============================= navbar things =============================
+
+#nav{
+	position: fixed;
+	height: 50px;
+	display: flex;
+	width: 100%;
+	*{
+		font-size: 12pt;
+		text-transform: uppercase;
+		letter-spacing: 2px;
+	}
+
+	.navBar{
+		background: $color1;
+		position: relative;
+		color: white;
+		display: inline;
+		box-shadow: $shadow1;
+		width: 100%;
+	}
+	.beginning{
+		width: 50px;
+		margin-right: 1px;
+	}
+	.end{
+		margin-left: 1px;
+	}
+	.navLink{
+		outline: none;
+		background: $color1;
+		position: relative;
+		color: white;
+		padding: 15px;
+		margin: 0 1px;
+		display: inline;
+		transition: .1s;
+		bottom: 0px;
+		box-shadow: $shadow1;
+		padding-top: 17px;
+		&:hover{
+			cursor: pointer;
+			background: lighten($color1,10);
+			bottom: 3px;
+			box-shadow: 0px 8px 5px rgba(0,0,0,0.1);
+		};
+	}
+	margin: 0px 0px 40px;
+}
+
+
+.active {
+	border-bottom: 6px solid $color1_inv !important;
 }
 
 h1{
@@ -42,46 +137,42 @@ h1{
 	margin: 0;
 }
 
-#nav{
-	.navLink{
-		background: $color1;
-		position: relative;
-		color: white;
-		padding: 10px;
-		margin: 1px;
-		display: inline;
-		transition: .1s;
-		bottom: 0px;
-		&:hover,&:focus{
-			outline: none;
-			cursor: pointer;
-			background: lighten($color1,10);
-			bottom: 3px;
-		}
-	}
-	margin: 30px 0px;
-}
+//============================= blog things =============================
 
 blog-post{
+
 	div{
-		padding: 20px 0px;
-		h1{
-			margin: 10px 0px;
+		display: flex;
+		flex-direction: column;
+		margin: 0px 10px;
+		>h1{
+			margin: 0px 0px;
 			font-weight: 800;
-			color: #333;
+			color: #555;	
 		}
 		p{
-			line-height: 1.5
+			margin: 0;
+			font-size: 13pt;
+			line-height: 1.5;
+		}
+		.date{
+			font-style: italic;
+			font-size:12pt;
+			color: grey;
+			padding-bottom: 5pt;
 		}
 	}
 	hr{
-		margin: 20px auto;
+		margin: 20px 0px;
 		width: 80%;
 	    border: 0;
 	    height: 1px;
 	    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), $color1, rgba(0, 0, 0, 0));
 	}
 }
+
+//============================= admin things =============================
+
 
 #admin{
 	*{
@@ -117,19 +208,23 @@ blog-post{
 	}
 }
 
+//============================= project things =============================
+
+
 .projectThumb{
 	display: flex;
+	flex-direction: row;
 	width: 100%;
-	height: 300px;
 	border: 1px solid rgba(0,0,0,0.2);
+	justify-content: space-between;
+	background-color: rgba(255,255,255,0.2);
 	.imgThumb {
-		display: inline;
-		width: 500px;
+		width: 50%;
+		height: 100%;
 	}
 	.right{
-		display: inline-flex;
+		display: flex;
 		flex-direction: column;
-		width: 500px;
 		h1{
 			padding: 10px;
 			background: $color1;
@@ -138,8 +233,26 @@ blog-post{
 		span{
 			padding: 10px;
 			line-height: 1.5;
+			flex-grow: 1;
+		}
+		.bottombuttons-container {
+			display: flex;
+			flex-direction: row;
+			background: $color1_inv;
+			div{
+				width: 50%;
+				box-sizing: content-box;
+				text-align: center;
+				padding: 10px;
+				cursor: pointer;
+				border: 1px solid lighten($color1_inv,20);
+				&:hover{
+					background: lighten($color1_inv,20);
+				};
+			}
 		}
 	}
 	margin: 10px 0px;
+	box-shadow: $shadow1;
 }
 
