modularized stylesheet and added keyboard nav

--- a/public/views/projectDirective.html
+++ b/public/views/projectDirective.html
@@ -1,10 +1,11 @@
 <div class="projectThumb">
-	<img class="imgThumb" ng-src="/images/{{project.name}}.png"></img>
-	<div class="right">
-		<h1>{{project.displayName}}</h1>
+	<h1 class="title name2">{{project.displayName}}</h1>
+	<div class="description">
+		<h1 class="title name1">{{project.displayName}}</h1>
 		<span>{{project.description}}</span>
 		<div class="bottombuttons-container">
-			<div>view on github</div><div>view website</div>
+			<div>View on Github</div><div>View Website</div>
 		</div>
 	</div>
+	<img class="imgThumb" ng-src="/images/{{project.name}}.png"></img>
 </div>
