--- a/public/compass/sass/screen.scss
+++ b/public/compass/sass/screen.scss
@@ -5,67 +5,26 @@
 
 
 /*$color1: #48C;*/
-$color1: #25A;
-$color1_inv: lighten(invert($color1),0);
+/*$color1: #448;*/
 
+$color1: darken(#48C,0);
+$color2: darken(orange,5);
+$color3: $color2;
 
 $shadow1: 0px 4px 5px rgba(0,0,0,0.2);
-
-//============================= disable overflow scroll =============================
-
-html, body {
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-}
-
-body {
-    height: 100%;
-    overflow: scroll;
-    -webkit-overflow-scrolling: touch;
-}
-
-//============================= responsive things =============================
-
-
-@media screen and (max-width: 783px) {
-	.projectThumb{
-		span,div{
-			font-size: 1.6vw;
-		}
-	}
-}
-
-@media screen and (max-width: 620px) {
-	.navBar{
-		display: none !important;
-	}
-	.navLink{
-		width: 100%;
-	}
-	.projectThumb{
-		flex-direction: column !important;
-		img{
-			width: 100% !important;
-		}
-		margin: 20px 0px !important;
-		span,div{
-			font-size: 10pt;
-		}
-	}
-}
-
 
 
 
 //============================= set up main layout =============================
+
 body{
 	margin: 0;
 	*{ 
 		font-family: 'Roboto', sans-serif;
 		font-size: 10pt;
 	}
-	background: white;
+	/*background: url('../../images/concrete_wall.png');*/
+	background: #DDD;
 }
 
 
@@ -76,185 +35,10 @@ body{
 	margin: 0 auto;
 }
 
-//============================= navbar things =============================
 
-#nav{
-	position: fixed;
-	height: 50px;
-	display: flex;
-	width: 100%;
-	*{
-		font-size: 12pt;
-		text-transform: uppercase;
-		letter-spacing: 2px;
-	}
-
-	.navBar{
-		background: linear-gradient($color1,darken($color1,10));
-		position: relative;
-		color: white;
-		display: inline;
-		box-shadow: $shadow1;
-		width: 100%;
-	}
-	.beginning{
-		width: 50px;
-		margin-right: 1px;
-	}
-	.end{
-		margin-left: 1px;
-	}
-	.navLink{
-		outline: none;
-		background: linear-gradient($color1, darken($color1,10));
-		position: relative;
-		color: white;
-		padding: 15px;
-		margin: 0 1px;
-		display: inline;
-		transition: .1s;
-		bottom: 0px;
-		box-shadow: $shadow1;
-		padding-top: 17px;
-		&:hover{
-			cursor: pointer;
-			background: linear-gradient(lighten($color1,5),darken($color1,0));
-			bottom: 3px;
-			box-shadow: 0px 8px 5px rgba(0,0,0,0.1);
-		};
-	}
-	margin: 0px 0px 40px;
-}
-
-
-.active {
-	border-bottom: 6px solid $color1_inv !important;
-}
-
-h1{
-	font-size: 30pt;
-	font-weight: 500;
-	margin: 0;
-}
-
-//============================= blog things =============================
-
-blog-post{
-
-	div{
-		display: flex;
-		flex-direction: column;
-		margin: 0px 10px;
-		>h1{
-			margin: 0px 0px;
-			font-weight: 800;
-			color: #555;	
-		}
-		p{
-			margin: 0;
-			font-size: 13pt;
-			line-height: 1.5;
-		}
-		.date{
-			font-style: italic;
-			font-size:12pt;
-			color: grey;
-			padding-bottom: 5pt;
-		}
-	}
-	hr{
-		margin: 20px auto;
-		width: 80%;
-	    border: 0;
-	    height: 1px;
-	    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), $color1, rgba(0, 0, 0, 0));
-	}
-}
-
-//============================= admin things =============================
-
-
-#admin{
-	*{
-		display: block;
-		margin-bottom: 10px;
-	}
-
-	button {
-		padding: 10px;
-	}
-
-	form{
-		#title{
-			font-size: 20pt;
-			font-weight: bold;
-			width: 100%;
-		}
-		textarea{
-			width: 100%;
-			height: 200px;
-			display: inline-block;
-		}
-		#tags{
-			width: 100%;
-		}
-		button {
-			float: right;
-		}
-	}
-	#togglePreview *{
-		cursor: pointer;
-		display: inline;
-	}
-}
-
-//============================= project things =============================
-
-
-.projectThumb{
-	display: flex;
-	flex-direction: row;
-	width: 100%;
-	border: 1px solid rgba(0,0,0,0.2);
-	justify-content: space-between;
-	background-color: rgba(255,255,255,0.2);
-	.imgThumb {
-		width: 50%;
-		height: 100%;
-	}
-	.right{
-		display: flex;
-		flex-direction: column;
-		h1{
-			padding: 10px;
-			background: linear-gradient($color1,darken($color1,10));
-			color: white;
-		}
-		span{
-			padding: 10px;
-			line-height: 1.5;
-			flex-grow: 1;
-		}
-		.bottombuttons-container {
-			display: flex;
-			flex-direction: row;
-
-			div{
-				width: 50%;
-				background: linear-gradient($color1_inv, darken($color1_inv,20));
-				box-sizing: content-box;
-				text-align: center;
-				padding: 10px;
-				cursor: pointer;
-				border: 1px solid darken($color1_inv,25);
-				box-shadow: 0px 1px lighten($color1_inv, 20) inset;
-				&:hover{
-					background: linear-gradient($color1_inv, darken($color1_inv,10));
-				};
-			}
-		}
-	}
-	margin: 10px 0px;
-	box-shadow: $shadow1;
-}
-
+@import './responsive.scss';
+@import './projects.scss';
+@import './about.scss';
+@import './admin.scss';
+@import './blog.scss';
+@import './navbar.scss';
