--- a/public/compass/stylesheets/screen.css
+++ b/public/compass/stylesheets/screen.css
@@ -3,63 +3,20 @@
  * Import this file using the following HTML or equivalent:
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
 /*$color1: #48C;*/
-/* line 16, ../sass/screen.scss */
-html, body {
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-}
-
-/* line 22, ../sass/screen.scss */
-body {
-  height: 100%;
-  overflow: scroll;
-  -webkit-overflow-scrolling: touch;
-}
-
-@media screen and (max-width: 783px) {
-  /* line 33, ../sass/screen.scss */
-  .projectThumb span, .projectThumb div {
-    font-size: 1.6vw;
-  }
-}
-@media screen and (max-width: 620px) {
-  /* line 40, ../sass/screen.scss */
-  .navBar {
-    display: none !important;
-  }
-
-  /* line 43, ../sass/screen.scss */
-  .navLink {
-    width: 100%;
-  }
-
-  /* line 46, ../sass/screen.scss */
-  .projectThumb {
-    flex-direction: column !important;
-    margin: 20px 0px !important;
-  }
-  /* line 48, ../sass/screen.scss */
-  .projectThumb img {
-    width: 100% !important;
-  }
-  /* line 52, ../sass/screen.scss */
-  .projectThumb span, .projectThumb div {
-    font-size: 10pt;
-  }
-}
-/* line 62, ../sass/screen.scss */
+/*$color1: #448;*/
+/* line 20, ../sass/screen.scss */
 body {
   margin: 0;
-  background: white;
+  /*background: url('../../images/concrete_wall.png');*/
+  background: #DDD;
 }
-/* line 64, ../sass/screen.scss */
+/* line 22, ../sass/screen.scss */
 body * {
   font-family: 'Roboto', sans-serif;
   font-size: 10pt;
 }
 
-/* line 72, ../sass/screen.scss */
+/* line 31, ../sass/screen.scss */
 #content {
   padding-top: 100px;
   max-width: 1000px;
@@ -67,42 +24,284 @@ body * {
   margin: 0 auto;
 }
 
-/* line 81, ../sass/screen.scss */
+/* line 3, ../sass/responsive.scss */
+html, body {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+/* line 9, ../sass/responsive.scss */
+body {
+  height: 100%;
+  overflow: scroll;
+  -webkit-overflow-scrolling: touch;
+}
+
+@media screen and (max-width: 783px) {
+  /* line 19, ../sass/responsive.scss */
+  .projectThumb {
+    border-left: none !important;
+    border-right: none !important;
+  }
+  /* line 22, ../sass/responsive.scss */
+  .projectThumb span, .projectThumb div {
+    font-size: 1.6vw;
+  }
+}
+@media screen and (max-width: 620px) {
+  /* line 31, ../sass/responsive.scss */
+  .navBar {
+    display: none !important;
+  }
+
+  /* line 34, ../sass/responsive.scss */
+  .navLink {
+    width: 100%;
+  }
+
+  /* line 37, ../sass/responsive.scss */
+  .projectThumb {
+    flex-direction: column !important;
+    margin: 20px 0px !important;
+  }
+  /* line 40, ../sass/responsive.scss */
+  .projectThumb img {
+    width: 100% !important;
+  }
+  /* line 44, ../sass/responsive.scss */
+  .projectThumb span, .projectThumb div {
+    font-size: 10pt;
+  }
+  /* line 47, ../sass/responsive.scss */
+  .projectThumb .description {
+    order: 1 !important;
+  }
+  /* line 51, ../sass/responsive.scss */
+  .projectThumb .name1 {
+    display: none !important;
+  }
+  /* line 54, ../sass/responsive.scss */
+  .projectThumb .name2 {
+    display: flex !important;
+  }
+
+  /* line 58, ../sass/responsive.scss */
+  #content {
+    padding-top: 50px !important;
+  }
+}
+@media only screen and (min-device-width: 375px) and (max-device-width: 667px) {
+  /* line 65, ../sass/responsive.scss */
+  #nav {
+    height: 100px !important;
+  }
+  /* line 67, ../sass/responsive.scss */
+  #nav * {
+    font-size: 30pt !important;
+  }
+
+  /* line 71, ../sass/responsive.scss */
+  .navBar {
+    display: none !important;
+  }
+
+  /* line 74, ../sass/responsive.scss */
+  .navLink {
+    width: 100%;
+  }
+
+  /* line 77, ../sass/responsive.scss */
+  .projectThumb {
+    border-left: none !important;
+    border-right: none !important;
+    flex-direction: column !important;
+    margin: 20px 0px !important;
+  }
+  /* line 81, ../sass/responsive.scss */
+  .projectThumb img {
+    width: 100% !important;
+  }
+  /* line 88, ../sass/responsive.scss */
+  .projectThumb span, .projectThumb div {
+    font-size: 10pt;
+  }
+  /* line 91, ../sass/responsive.scss */
+  .projectThumb .bottombuttons-container {
+    height: 75px;
+  }
+  /* line 93, ../sass/responsive.scss */
+  .projectThumb .bottombuttons-container * {
+    font-size: 25pt;
+  }
+}
+/* line 4, ../sass/projects.scss */
+.projectThumb {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  border: 2px solid #2a629a;
+  justify-content: space-between;
+  background-color: rgba(255, 255, 255, 0.8);
+  margin-bottom: 25px;
+  box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.2);
+}
+/* line 11, ../sass/projects.scss */
+.projectThumb .imgThumb {
+  width: 50%;
+  height: 100%;
+  /*padding: 0px;*/
+}
+/* line 17, ../sass/projects.scss */
+.projectThumb .title {
+  padding: 10px;
+  background: linear-gradient(#4488cc, #2f6fae);
+  color: white;
+}
+/* line 22, ../sass/projects.scss */
+.projectThumb .name2 {
+  display: none;
+}
+/* line 25, ../sass/projects.scss */
+.projectThumb .description {
+  display: flex;
+  flex-direction: column;
+}
+/* line 28, ../sass/projects.scss */
+.projectThumb .description span {
+  padding: 10px;
+  line-height: 1.5;
+  flex-grow: 1;
+}
+/* line 33, ../sass/projects.scss */
+.projectThumb .description .bottombuttons-container {
+  display: flex;
+  flex-direction: row;
+  font-weight: 500;
+  color: white;
+}
+/* line 39, ../sass/projects.scss */
+.projectThumb .description .bottombuttons-container div {
+  box-sizing: margin-box;
+  width: 100%;
+  margin: 1px;
+  background: linear-gradient(#e69500, #b37400);
+  box-sizing: content-box;
+  text-align: center;
+  padding: 10px;
+  cursor: pointer;
+}
+/* line 48, ../sass/projects.scss */
+.projectThumb .description .bottombuttons-container div:hover {
+  background: linear-gradient(#ffae1a, #e69500);
+}
+
+/* line 5, ../sass/admin.scss */
+#admin * {
+  display: block;
+  margin-bottom: 10px;
+}
+/* line 10, ../sass/admin.scss */
+#admin button {
+  padding: 10px;
+}
+/* line 15, ../sass/admin.scss */
+#admin form #title {
+  font-size: 20pt;
+  font-weight: bold;
+  width: 100%;
+}
+/* line 20, ../sass/admin.scss */
+#admin form textarea {
+  width: 100%;
+  height: 200px;
+  display: inline-block;
+}
+/* line 25, ../sass/admin.scss */
+#admin form #tags {
+  width: 100%;
+}
+/* line 28, ../sass/admin.scss */
+#admin form button {
+  float: right;
+}
+/* line 32, ../sass/admin.scss */
+#admin #togglePreview * {
+  cursor: pointer;
+  display: inline;
+}
+
+/* line 5, ../sass/blog.scss */
+blog-post div {
+  display: flex;
+  flex-direction: column;
+  margin: 0px 10px;
+}
+/* line 9, ../sass/blog.scss */
+blog-post div > h1 {
+  margin: 0px 0px;
+  font-weight: 800;
+  color: #666;
+}
+/* line 14, ../sass/blog.scss */
+blog-post div p {
+  margin: 0;
+  font-size: 13pt;
+  line-height: 1.5;
+}
+/* line 19, ../sass/blog.scss */
+blog-post div .date {
+  font-style: italic;
+  font-size: 12pt;
+  color: grey;
+  padding-bottom: 5pt;
+}
+/* line 26, ../sass/blog.scss */
+blog-post hr {
+  margin: 20px auto;
+  width: 80%;
+  border: 0;
+  height: 1px;
+  background-image: linear-gradient(to right, transparent, #e69500, transparent);
+}
+
+/* line 3, ../sass/navbar.scss */
 #nav {
   position: fixed;
   height: 50px;
   display: flex;
   width: 100%;
   margin: 0px 0px 40px;
+  /*box-shadow: 0 20px 50px rgba(255,255,255,0.6);*/
 }
-/* line 86, ../sass/screen.scss */
+/* line 8, ../sass/navbar.scss */
 #nav * {
   font-size: 12pt;
   text-transform: uppercase;
   letter-spacing: 2px;
 }
-/* line 92, ../sass/screen.scss */
+/* line 14, ../sass/navbar.scss */
 #nav .navBar {
-  background: linear-gradient(#25A, #1a4080);
+  background: linear-gradient(#4488cc, #2f6fae);
   position: relative;
   color: white;
   display: inline;
   box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.2);
   width: 100%;
 }
-/* line 100, ../sass/screen.scss */
+/* line 22, ../sass/navbar.scss */
 #nav .beginning {
   width: 50px;
   margin-right: 1px;
 }
-/* line 104, ../sass/screen.scss */
+/* line 26, ../sass/navbar.scss */
 #nav .end {
   margin-left: 1px;
 }
-/* line 107, ../sass/screen.scss */
+/* line 29, ../sass/navbar.scss */
 #nav .navLink {
   outline: none;
-  background: linear-gradient(#25A, #1a4080);
+  background: linear-gradient(#4488cc, #2f6fae);
   position: relative;
   color: white;
   padding: 15px;
@@ -113,145 +312,22 @@ body * {
   box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.2);
   padding-top: 17px;
 }
-/* line 119, ../sass/screen.scss */
+/* line 41, ../sass/navbar.scss */
 #nav .navLink:hover {
   cursor: pointer;
-  background: linear-gradient(#2660bf, #2255aa);
+  background: linear-gradient(#5895d1, #4488cc);
   bottom: 3px;
   box-shadow: 0px 8px 5px rgba(0, 0, 0, 0.1);
 }
 
-/* line 130, ../sass/screen.scss */
+/* line 53, ../sass/navbar.scss */
 .active {
-  border-bottom: 6px solid #ddaa55 !important;
+  border-bottom: 6px solid #e69500 !important;
 }
 
-/* line 134, ../sass/screen.scss */
+/* line 57, ../sass/navbar.scss */
 h1 {
   font-size: 30pt;
   font-weight: 500;
   margin: 0;
-}
-
-/* line 144, ../sass/screen.scss */
-blog-post div {
-  display: flex;
-  flex-direction: column;
-  margin: 0px 10px;
-}
-/* line 148, ../sass/screen.scss */
-blog-post div > h1 {
-  margin: 0px 0px;
-  font-weight: 800;
-  color: #555;
-}
-/* line 153, ../sass/screen.scss */
-blog-post div p {
-  margin: 0;
-  font-size: 13pt;
-  line-height: 1.5;
-}
-/* line 158, ../sass/screen.scss */
-blog-post div .date {
-  font-style: italic;
-  font-size: 12pt;
-  color: grey;
-  padding-bottom: 5pt;
-}
-/* line 165, ../sass/screen.scss */
-blog-post hr {
-  margin: 20px auto;
-  width: 80%;
-  border: 0;
-  height: 1px;
-  background-image: linear-gradient(to right, transparent, #25A, transparent);
-}
-
-/* line 178, ../sass/screen.scss */
-#admin * {
-  display: block;
-  margin-bottom: 10px;
-}
-/* line 183, ../sass/screen.scss */
-#admin button {
-  padding: 10px;
-}
-/* line 188, ../sass/screen.scss */
-#admin form #title {
-  font-size: 20pt;
-  font-weight: bold;
-  width: 100%;
-}
-/* line 193, ../sass/screen.scss */
-#admin form textarea {
-  width: 100%;
-  height: 200px;
-  display: inline-block;
-}
-/* line 198, ../sass/screen.scss */
-#admin form #tags {
-  width: 100%;
-}
-/* line 201, ../sass/screen.scss */
-#admin form button {
-  float: right;
-}
-/* line 205, ../sass/screen.scss */
-#admin #togglePreview * {
-  cursor: pointer;
-  display: inline;
-}
-
-/* line 214, ../sass/screen.scss */
-.projectThumb {
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-  border: 1px solid rgba(0, 0, 0, 0.2);
-  justify-content: space-between;
-  background-color: rgba(255, 255, 255, 0.2);
-  margin: 10px 0px;
-  box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.2);
-}
-/* line 221, ../sass/screen.scss */
-.projectThumb .imgThumb {
-  width: 50%;
-  height: 100%;
-}
-/* line 225, ../sass/screen.scss */
-.projectThumb .right {
-  display: flex;
-  flex-direction: column;
-}
-/* line 228, ../sass/screen.scss */
-.projectThumb .right h1 {
-  padding: 10px;
-  background: linear-gradient(#25A, #1a4080);
-  color: white;
-}
-/* line 233, ../sass/screen.scss */
-.projectThumb .right span {
-  padding: 10px;
-  line-height: 1.5;
-  flex-grow: 1;
-}
-/* line 238, ../sass/screen.scss */
-.projectThumb .right .bottombuttons-container {
-  display: flex;
-  flex-direction: row;
-}
-/* line 242, ../sass/screen.scss */
-.projectThumb .right .bottombuttons-container div {
-  width: 50%;
-  background: linear-gradient(#ddaa55, #aa7722);
-  box-sizing: content-box;
-  text-align: center;
-  padding: 10px;
-  cursor: pointer;
-  border: 1px solid #95681e;
-  box-shadow: 0px 1px #eed5aa inset;
-}
-/* line 251, ../sass/screen.scss */
-.projectThumb .right .bottombuttons-container div:hover {
-  background: linear-gradient(#ddaa55, #d5952b);
 }
