--- a/public/compass/sass/responsive.scss
+++ b/public/compass/sass/responsive.scss
@@ -1,3 +1,6 @@
+@import './basecolors.scss';
+
+
 //============================= disable overflow scroll =============================
 
 html, body {
