--- a/public/compass/sass/navbar.scss
+++ b/public/compass/sass/navbar.scss
@@ -1,5 +1,7 @@
 //============================= navbar things =============================
 
+@import './basecolors.scss';
+
 #nav{
 	position: fixed;
 	height: 50px;
@@ -18,12 +20,14 @@
 		display: inline;
 		box-shadow: $shadow1;
 		width: 100%;
+		border-bottom: 2px solid darken($color1,20);
 	}
 	.beginning{
-		width: 50px;
+		max-width: calc((100vw - 1000px)/2);
 		margin-right: 1px;
 	}
 	.end{
+		width: 100%;
 		margin-left: 1px;
 	}
 	.navLink{
@@ -33,17 +37,20 @@
 		color: white;
 		padding: 15px;
 		margin: 0 1px;
-		display: inline;
-		transition: .1s;
+		transition: .2s;
 		bottom: 0px;
 		box-shadow: $shadow1;
 		padding-top: 17px;
+		border-bottom: 2px solid darken($color1,20);
+
 		&:hover{
 			cursor: pointer;
 			background: linear-gradient(lighten($color1,5),darken($color1,0));
+			border-bottom: 2px solid darken($color1,10);
 			bottom: 3px;
-			box-shadow: 0px 8px 5px rgba(0,0,0,0.1);
+			box-shadow: 0px 5px 15px rgba(0,0,0,0.25);
 		};
+
 	}
 	margin: 0px 0px 40px;
 	/*box-shadow: 0 20px 50px rgba(255,255,255,0.6);*/
