--- a/public/compass/stylesheets/responsive.css
+++ b/public/compass/stylesheets/responsive.css
@@ -1,111 +1,48 @@
-/* line 3, ../sass/responsive.scss */
-html, body {
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-}
+/*$color1: #48C;*/
+/*$color1: #448;*/
+/* line 6, ../sass/responsive.scss */
+html, body { width: 100%; height: 100%; overflow: hidden; }
 
-/* line 9, ../sass/responsive.scss */
-body {
-  height: 100%;
-  overflow: scroll;
-  -webkit-overflow-scrolling: touch;
-}
+/* line 12, ../sass/responsive.scss */
+body { height: 100%; overflow: scroll; -webkit-overflow-scrolling: touch; }
 
-@media screen and (max-width: 783px) {
-  /* line 19, ../sass/responsive.scss */
-  .projectThumb {
-    border-left: none !important;
-    border-right: none !important;
-  }
-  /* line 22, ../sass/responsive.scss */
-  .projectThumb span, .projectThumb div {
-    font-size: 1.6vw;
-  }
-}
-@media screen and (max-width: 620px) {
-  /* line 31, ../sass/responsive.scss */
-  .navBar {
-    display: none !important;
-  }
-
-  /* line 34, ../sass/responsive.scss */
-  .navLink {
-    width: 100%;
-  }
-
+@media screen and (max-width: 783px) { /* line 22, ../sass/responsive.scss */
+  .projectThumb { border-left: none !important; border-right: none !important; }
+  /* line 25, ../sass/responsive.scss */
+  .projectThumb span, .projectThumb div { font-size: 1.6vw; } }
+@media screen and (max-width: 620px) { /* line 34, ../sass/responsive.scss */
+  .navBar { display: none !important; }
   /* line 37, ../sass/responsive.scss */
-  .projectThumb {
-    flex-direction: column !important;
-    margin: 20px 0px !important;
-  }
+  .navLink { width: 100%; }
   /* line 40, ../sass/responsive.scss */
-  .projectThumb img {
-    width: 100% !important;
-  }
-  /* line 44, ../sass/responsive.scss */
-  .projectThumb span, .projectThumb div {
-    font-size: 10pt;
-  }
+  .projectThumb { flex-direction: column !important; margin: 20px 0px !important; }
+  /* line 43, ../sass/responsive.scss */
+  .projectThumb img { width: 100% !important; }
   /* line 47, ../sass/responsive.scss */
-  .projectThumb .description {
-    order: 1 !important;
-  }
-  /* line 51, ../sass/responsive.scss */
-  .projectThumb .name1 {
-    display: none !important;
-  }
+  .projectThumb span, .projectThumb div { font-size: 10pt; }
+  /* line 50, ../sass/responsive.scss */
+  .projectThumb .description { order: 1 !important; }
   /* line 54, ../sass/responsive.scss */
-  .projectThumb .name2 {
-    display: flex !important;
-  }
-
-  /* line 58, ../sass/responsive.scss */
-  #content {
-    padding-top: 50px !important;
-  }
-}
-@media only screen and (min-device-width: 375px) and (max-device-width: 667px) {
-  /* line 65, ../sass/responsive.scss */
-  #nav {
-    height: 100px !important;
-  }
-  /* line 67, ../sass/responsive.scss */
-  #nav * {
-    font-size: 30pt !important;
-  }
-
-  /* line 71, ../sass/responsive.scss */
-  .navBar {
-    display: none !important;
-  }
-
+  .projectThumb .name1 { display: none !important; }
+  /* line 57, ../sass/responsive.scss */
+  .projectThumb .name2 { display: flex !important; }
+  /* line 61, ../sass/responsive.scss */
+  #content { padding-top: 50px !important; } }
+@media only screen and (min-device-width: 375px) and (max-device-width: 667px) { /* line 68, ../sass/responsive.scss */
+  #nav { height: 100px !important; }
+  /* line 70, ../sass/responsive.scss */
+  #nav * { font-size: 30pt !important; }
   /* line 74, ../sass/responsive.scss */
-  .navLink {
-    width: 100%;
-  }
-
+  .navBar { display: none !important; }
   /* line 77, ../sass/responsive.scss */
-  .projectThumb {
-    border-left: none !important;
-    border-right: none !important;
-    flex-direction: column !important;
-    margin: 20px 0px !important;
-  }
-  /* line 81, ../sass/responsive.scss */
-  .projectThumb img {
-    width: 100% !important;
-  }
-  /* line 88, ../sass/responsive.scss */
-  .projectThumb span, .projectThumb div {
-    font-size: 10pt;
-  }
+  .navLink { width: 100%; }
+  /* line 80, ../sass/responsive.scss */
+  .projectThumb { border-left: none !important; border-right: none !important; flex-direction: column !important; margin: 20px 0px !important; }
+  /* line 84, ../sass/responsive.scss */
+  .projectThumb img { width: 100% !important; }
   /* line 91, ../sass/responsive.scss */
-  .projectThumb .bottombuttons-container {
-    height: 75px;
-  }
-  /* line 93, ../sass/responsive.scss */
-  .projectThumb .bottombuttons-container * {
-    font-size: 25pt;
-  }
-}
+  .projectThumb span, .projectThumb div { font-size: 10pt; }
+  /* line 94, ../sass/responsive.scss */
+  .projectThumb .bottombuttons-container { height: 75px; }
+  /* line 96, ../sass/responsive.scss */
+  .projectThumb .bottombuttons-container * { font-size: 25pt; } }
