--- a/public/compass/stylesheets/screen.css
+++ b/public/compass/stylesheets/screen.css
@@ -1,333 +1,125 @@
-/* Welcome to Compass.
- * In this file you should write your main styles. (or centralize your imports)
- * Import this file using the following HTML or equivalent:
- * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
+/* Welcome to Compass. In this file you should write your main styles. (or centralize your imports) Import this file using the following HTML or equivalent: <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
 /*$color1: #48C;*/
 /*$color1: #448;*/
-/* line 20, ../sass/screen.scss */
-body {
-  margin: 0;
-  /*background: url('../../images/concrete_wall.png');*/
-  background: #DDD;
-}
+/* line 11, ../sass/screen.scss */
+body { margin: 0; /*background: url('../../images/concrete_wall.png');*/ background: #DDD; }
+/* line 13, ../sass/screen.scss */
+body * { font-family: 'Roboto', sans-serif; font-size: 10pt; }
+
 /* line 22, ../sass/screen.scss */
-body * {
-  font-family: 'Roboto', sans-serif;
-  font-size: 10pt;
-}
+#content { padding-top: 100px; max-width: 1000px; width: 100%; margin: 0 auto; }
 
-/* line 31, ../sass/screen.scss */
-#content {
-  padding-top: 100px;
-  max-width: 1000px;
-  width: 100%;
-  margin: 0 auto;
-}
+/* line 6, ../sass/responsive.scss */
+html, body { width: 100%; height: 100%; overflow: hidden; }
 
-/* line 3, ../sass/responsive.scss */
-html, body {
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-}
+/* line 12, ../sass/responsive.scss */
+body { height: 100%; overflow: scroll; -webkit-overflow-scrolling: touch; }
 
-/* line 9, ../sass/responsive.scss */
-body {
-  height: 100%;
-  overflow: scroll;
-  -webkit-overflow-scrolling: touch;
-}
-
-@media screen and (max-width: 783px) {
-  /* line 19, ../sass/responsive.scss */
-  .projectThumb {
-    border-left: none !important;
-    border-right: none !important;
-  }
-  /* line 22, ../sass/responsive.scss */
-  .projectThumb span, .projectThumb div {
-    font-size: 1.6vw;
-  }
-}
-@media screen and (max-width: 620px) {
-  /* line 31, ../sass/responsive.scss */
-  .navBar {
-    display: none !important;
-  }
-
-  /* line 34, ../sass/responsive.scss */
-  .navLink {
-    width: 100%;
-  }
-
+@media screen and (max-width: 783px) { /* line 22, ../sass/responsive.scss */
+  .projectThumb { border-left: none !important; border-right: none !important; }
+  /* line 25, ../sass/responsive.scss */
+  .projectThumb span, .projectThumb div { font-size: 1.6vw; } }
+@media screen and (max-width: 620px) { /* line 34, ../sass/responsive.scss */
+  .navBar { display: none !important; }
   /* line 37, ../sass/responsive.scss */
-  .projectThumb {
-    flex-direction: column !important;
-    margin: 20px 0px !important;
-  }
+  .navLink { width: 100%; }
   /* line 40, ../sass/responsive.scss */
-  .projectThumb img {
-    width: 100% !important;
-  }
-  /* line 44, ../sass/responsive.scss */
-  .projectThumb span, .projectThumb div {
-    font-size: 10pt;
-  }
+  .projectThumb { flex-direction: column !important; margin: 20px 0px !important; }
+  /* line 43, ../sass/responsive.scss */
+  .projectThumb img { width: 100% !important; }
   /* line 47, ../sass/responsive.scss */
-  .projectThumb .description {
-    order: 1 !important;
-  }
-  /* line 51, ../sass/responsive.scss */
-  .projectThumb .name1 {
-    display: none !important;
-  }
+  .projectThumb span, .projectThumb div { font-size: 10pt; }
+  /* line 50, ../sass/responsive.scss */
+  .projectThumb .description { order: 1 !important; }
   /* line 54, ../sass/responsive.scss */
-  .projectThumb .name2 {
-    display: flex !important;
-  }
-
-  /* line 58, ../sass/responsive.scss */
-  #content {
-    padding-top: 50px !important;
-  }
-}
-@media only screen and (min-device-width: 375px) and (max-device-width: 667px) {
-  /* line 65, ../sass/responsive.scss */
-  #nav {
-    height: 100px !important;
-  }
-  /* line 67, ../sass/responsive.scss */
-  #nav * {
-    font-size: 30pt !important;
-  }
-
-  /* line 71, ../sass/responsive.scss */
-  .navBar {
-    display: none !important;
-  }
-
+  .projectThumb .name1 { display: none !important; }
+  /* line 57, ../sass/responsive.scss */
+  .projectThumb .name2 { display: flex !important; }
+  /* line 61, ../sass/responsive.scss */
+  #content { padding-top: 50px !important; } }
+@media only screen and (min-device-width: 375px) and (max-device-width: 667px) { /* line 68, ../sass/responsive.scss */
+  #nav { height: 100px !important; }
+  /* line 70, ../sass/responsive.scss */
+  #nav * { font-size: 30pt !important; }
   /* line 74, ../sass/responsive.scss */
-  .navLink {
-    width: 100%;
-  }
-
+  .navBar { display: none !important; }
   /* line 77, ../sass/responsive.scss */
-  .projectThumb {
-    border-left: none !important;
-    border-right: none !important;
-    flex-direction: column !important;
-    margin: 20px 0px !important;
-  }
-  /* line 81, ../sass/responsive.scss */
-  .projectThumb img {
-    width: 100% !important;
-  }
-  /* line 88, ../sass/responsive.scss */
-  .projectThumb span, .projectThumb div {
-    font-size: 10pt;
-  }
+  .navLink { width: 100%; }
+  /* line 80, ../sass/responsive.scss */
+  .projectThumb { border-left: none !important; border-right: none !important; flex-direction: column !important; margin: 20px 0px !important; }
+  /* line 84, ../sass/responsive.scss */
+  .projectThumb img { width: 100% !important; }
   /* line 91, ../sass/responsive.scss */
-  .projectThumb .bottombuttons-container {
-    height: 75px;
-  }
-  /* line 93, ../sass/responsive.scss */
-  .projectThumb .bottombuttons-container * {
-    font-size: 25pt;
-  }
-}
-/* line 4, ../sass/projects.scss */
-.projectThumb {
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-  border: 2px solid #2a629a;
-  justify-content: space-between;
-  background-color: rgba(255, 255, 255, 0.8);
-  margin-bottom: 25px;
-  box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.2);
-}
-/* line 11, ../sass/projects.scss */
-.projectThumb .imgThumb {
-  width: 50%;
-  height: 100%;
-  /*padding: 0px;*/
-}
-/* line 17, ../sass/projects.scss */
-.projectThumb .title {
-  padding: 10px;
-  background: linear-gradient(#4488cc, #2f6fae);
-  color: white;
-}
-/* line 22, ../sass/projects.scss */
-.projectThumb .name2 {
-  display: none;
-}
+  .projectThumb span, .projectThumb div { font-size: 10pt; }
+  /* line 94, ../sass/responsive.scss */
+  .projectThumb .bottombuttons-container { height: 75px; }
+  /* line 96, ../sass/responsive.scss */
+  .projectThumb .bottombuttons-container * { font-size: 25pt; } }
+/* line 7, ../sass/projects.scss */
+.projectThumb { display: flex; flex-direction: row; width: 100%; border: 2px solid #2a629a; justify-content: space-between; background-color: rgba(255, 255, 255, 0.8); margin-bottom: 25px; box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.2); }
+/* line 14, ../sass/projects.scss */
+.projectThumb .imgThumb { width: 50%; height: 100%; /*padding: 0px;*/ }
+/* line 20, ../sass/projects.scss */
+.projectThumb .title { padding: 10px; background: linear-gradient(#4488cc, #2f6fae); color: white; }
 /* line 25, ../sass/projects.scss */
-.projectThumb .description {
-  display: flex;
-  flex-direction: column;
-}
+.projectThumb .name2 { display: none; }
 /* line 28, ../sass/projects.scss */
-.projectThumb .description span {
-  padding: 10px;
-  line-height: 1.5;
-  flex-grow: 1;
-}
-/* line 33, ../sass/projects.scss */
-.projectThumb .description .bottombuttons-container {
-  display: flex;
-  flex-direction: row;
-  font-weight: 500;
-  color: white;
-}
-/* line 39, ../sass/projects.scss */
-.projectThumb .description .bottombuttons-container div {
-  box-sizing: margin-box;
-  width: 100%;
-  margin: 1px;
-  background: linear-gradient(#e69500, #b37400);
-  box-sizing: content-box;
-  text-align: center;
-  padding: 10px;
-  cursor: pointer;
-}
-/* line 48, ../sass/projects.scss */
-.projectThumb .description .bottombuttons-container div:hover {
-  background: linear-gradient(#ffae1a, #e69500);
-}
+.projectThumb .description { display: flex; flex-direction: column; }
+/* line 31, ../sass/projects.scss */
+.projectThumb .description span { padding: 10px; line-height: 1.5; flex-grow: 1; }
+/* line 36, ../sass/projects.scss */
+.projectThumb .description .bottombuttons-container { display: flex; flex-direction: row; font-weight: 500; color: white; }
+/* line 42, ../sass/projects.scss */
+.projectThumb .description .bottombuttons-container div { box-sizing: margin-box; width: 100%; margin: 1px; background: linear-gradient(#e69500, #b37400); box-sizing: content-box; text-align: center; padding: 10px; cursor: pointer; }
+/* line 51, ../sass/projects.scss */
+.projectThumb .description .bottombuttons-container div:hover { background: linear-gradient(#ffae1a, #e69500); }
 
-/* line 5, ../sass/admin.scss */
-#admin * {
-  display: block;
-  margin-bottom: 10px;
-}
-/* line 10, ../sass/admin.scss */
-#admin button {
-  padding: 10px;
-}
-/* line 15, ../sass/admin.scss */
-#admin form #title {
-  font-size: 20pt;
-  font-weight: bold;
-  width: 100%;
-}
-/* line 20, ../sass/admin.scss */
-#admin form textarea {
-  width: 100%;
-  height: 200px;
-  display: inline-block;
-}
-/* line 25, ../sass/admin.scss */
-#admin form #tags {
-  width: 100%;
-}
+/* line 8, ../sass/admin.scss */
+#admin * { display: block; margin-bottom: 10px; }
+/* line 13, ../sass/admin.scss */
+#admin button { padding: 10px; }
+/* line 18, ../sass/admin.scss */
+#admin form #title { font-size: 20pt; font-weight: bold; width: 100%; }
+/* line 23, ../sass/admin.scss */
+#admin form textarea { width: 100%; height: 200px; display: inline-block; }
 /* line 28, ../sass/admin.scss */
-#admin form button {
-  float: right;
-}
-/* line 32, ../sass/admin.scss */
-#admin #togglePreview * {
-  cursor: pointer;
-  display: inline;
-}
+#admin form #tags { width: 100%; }
+/* line 31, ../sass/admin.scss */
+#admin form button { float: right; }
+/* line 35, ../sass/admin.scss */
+#admin #togglePreview * { cursor: pointer; display: inline; }
 
-/* line 5, ../sass/blog.scss */
-blog-post div {
-  display: flex;
-  flex-direction: column;
-  margin: 0px 10px;
-}
-/* line 9, ../sass/blog.scss */
-blog-post div > h1 {
-  margin: 0px 0px;
-  font-weight: 800;
-  color: #666;
-}
-/* line 14, ../sass/blog.scss */
-blog-post div p {
-  margin: 0;
-  font-size: 13pt;
-  line-height: 1.5;
-}
-/* line 19, ../sass/blog.scss */
-blog-post div .date {
-  font-style: italic;
-  font-size: 12pt;
-  color: grey;
-  padding-bottom: 5pt;
-}
-/* line 26, ../sass/blog.scss */
-blog-post hr {
-  margin: 20px auto;
-  width: 80%;
-  border: 0;
-  height: 1px;
-  background-image: linear-gradient(to right, transparent, #e69500, transparent);
-}
+/* line 41, ../sass/admin.scss */
+.blogPost { background: white; padding: 15px; font-size: 12pt; }
 
-/* line 3, ../sass/navbar.scss */
-#nav {
-  position: fixed;
-  height: 50px;
-  display: flex;
-  width: 100%;
-  margin: 0px 0px 40px;
-  /*box-shadow: 0 20px 50px rgba(255,255,255,0.6);*/
-}
-/* line 8, ../sass/navbar.scss */
-#nav * {
-  font-size: 12pt;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-}
-/* line 14, ../sass/navbar.scss */
-#nav .navBar {
-  background: linear-gradient(#4488cc, #2f6fae);
-  position: relative;
-  color: white;
-  display: inline;
-  box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.2);
-  width: 100%;
-}
-/* line 22, ../sass/navbar.scss */
-#nav .beginning {
-  width: 50px;
-  margin-right: 1px;
-}
-/* line 26, ../sass/navbar.scss */
-#nav .end {
-  margin-left: 1px;
-}
+/* line 8, ../sass/blog.scss */
+blog-post div { display: flex; flex-direction: column; margin: 0px 10px; }
+/* line 12, ../sass/blog.scss */
+blog-post div > h1 { margin: 0px 0px; font-weight: 800; color: #666; }
+/* line 17, ../sass/blog.scss */
+blog-post div p, blog-post div p ul * { margin: 0; font-size: 14pt; line-height: 1.6; }
+/* line 22, ../sass/blog.scss */
+blog-post div .date { font-style: italic; font-size: 12pt; color: grey; margin: 5px; }
+/* line 29, ../sass/blog.scss */
+blog-post hr { margin: 20px auto; width: 80%; border: 0; height: 1px; background-image: linear-gradient(to right, transparent, #e69500, transparent); }
+
+/* line 5, ../sass/navbar.scss */
+#nav { position: fixed; height: 50px; display: flex; width: 100%; margin: 0px 0px 40px; /*box-shadow: 0 20px 50px rgba(255,255,255,0.6);*/ }
+/* line 10, ../sass/navbar.scss */
+#nav * { font-size: 12pt; text-transform: uppercase; letter-spacing: 2px; }
+/* line 16, ../sass/navbar.scss */
+#nav .navBar { background: linear-gradient(#4488cc, #2f6fae); position: relative; color: white; display: inline; box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.2); width: 100%; border-bottom: 2px solid #245586; }
+/* line 25, ../sass/navbar.scss */
+#nav .beginning { max-width: calc((100vw - 1000px)/2); margin-right: 1px; }
 /* line 29, ../sass/navbar.scss */
-#nav .navLink {
-  outline: none;
-  background: linear-gradient(#4488cc, #2f6fae);
-  position: relative;
-  color: white;
-  padding: 15px;
-  margin: 0 1px;
-  display: inline;
-  transition: .1s;
-  bottom: 0px;
-  box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.2);
-  padding-top: 17px;
-}
-/* line 41, ../sass/navbar.scss */
-#nav .navLink:hover {
-  cursor: pointer;
-  background: linear-gradient(#5895d1, #4488cc);
-  bottom: 3px;
-  box-shadow: 0px 8px 5px rgba(0, 0, 0, 0.1);
-}
+#nav .end { width: 100%; margin-left: 1px; }
+/* line 33, ../sass/navbar.scss */
+#nav .navLink { outline: none; background: linear-gradient(#4488cc, #2f6fae); position: relative; color: white; padding: 15px; margin: 0 1px; transition: .2s; bottom: 0px; box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.2); padding-top: 17px; border-bottom: 2px solid #245586; }
+/* line 46, ../sass/navbar.scss */
+#nav .navLink:hover { cursor: pointer; background: linear-gradient(#5895d1, #4488cc); border-bottom: 2px solid #2f6fae; bottom: 3px; box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.25); }
 
-/* line 53, ../sass/navbar.scss */
-.active {
-  border-bottom: 6px solid #e69500 !important;
-}
+/* line 60, ../sass/navbar.scss */
+.active { border-bottom: 6px solid #e69500 !important; }
 
-/* line 57, ../sass/navbar.scss */
-h1 {
-  font-size: 30pt;
-  font-weight: 500;
-  margin: 0;
-}
+/* line 64, ../sass/navbar.scss */
+h1 { font-size: 30pt; font-weight: 500; margin: 0; }
